--- a/Translate/Base.lproj/LaunchScreen.storyboard
+++ b/Translate/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,36 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Simple Translation App" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q88-nq-joB">
+                                <rect key="frame" x="143" y="224" width="315" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="315" id="sW8-We-DUE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kivilcim Celik 20056142" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0go-yn-WGc">
+                                <rect key="frame" x="207" y="297" width="187" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="187" id="6Y9-HN-WQB"/>
+                                    <constraint firstAttribute="height" constant="24" id="fET-RC-BnM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="0go-yn-WGc" secondAttribute="bottom" constant="279" id="8Mu-Iz-mft"/>
+                            <constraint firstItem="0go-yn-WGc" firstAttribute="top" secondItem="Q88-nq-joB" secondAttribute="bottom" constant="32" id="LzG-AN-fbJ"/>
+                            <constraint firstItem="Q88-nq-joB" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="204" id="Z3n-Om-xEn"/>
+                            <constraint firstItem="Q88-nq-joB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="w9O-Zf-Ri5"/>
+                            <constraint firstItem="0go-yn-WGc" firstAttribute="centerX" secondItem="Q88-nq-joB" secondAttribute="centerX" id="wkN-tY-cCc"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
